--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,8 @@ body{
     position: relative;
     display: inline-block;
     cursor: pointer;
+    font-family: "Lato", Verdana, sans-serif;
+    font-size: 20px;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -18,13 +20,13 @@ body{
 /* The actual popup */
 .popup .popuptext {
     visibility: hidden;
-    width: 170px;
+    width: 200px;
     background-color: #fff;
     color: red;
     text-align: center;
     border-radius: 6px;
     border: 1px solid red;
-    padding: 8px 0;
+    padding: 6px 0;
     position: absolute;
     z-index: 1;
     bottom: 125%;
@@ -38,17 +40,23 @@ body{
     position: absolute;
     top: 100%;
     right: 60%;
+    /* color: red; */
     /* margin-left: -5px; */
     border-width: 5px;
     border-style: solid;
-    border-color: #555 transparent transparent transparent;
+    border-color: red transparent transparent transparent;
 }
 
 /* Toggle this class - hide and show the popup */
 .popup .show {
     visibility: visible;
-    -webkit-animation: fadeIn 1s;
     animation: fadeIn 1s;
+}
+
+button{
+  border-style: none;
+  float: right;
+  color: inherit;
 }
 
 /* Add animation (fade in the popup) */
